# AIF-emotion-detection

./: README.md  index.html
.github/workflows/: image-demo-cd.yml
assets/: index.2a0c80ca.js  index.423324e5.css  index.53fffa34.js  index.5717706a.js  index.72058385.js  index.7cb2ba5f.css  index.aa880ca7.css  index.b242dec0.js  index.bb9b18a7.js
image/: .gitignore  Pipfile  generate-js-model.sh  image_emotion_detection.ipynb  pyproject.toml  text_emotion_detection.ipynb  training.log.csv
image/demo/: .env  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
image/demo/src/: chart.ts  env.d.ts  main.ts  model.ts  style.css  webcam.ts
report/: .gitignore  ledger.cls  main.tex  presentation.pptx  tempbib.bib
text/: Pipfile  pyproject.toml  text_emotion_detection.ipynb
